Game no longer hangs after specific actions.

Disabled undo button when computer makes the first move and human hasn't
made a move yet. Disabling undo button makes sense because using undo
button in this case did not serve any purpose.

https://bugzilla.gnome.org/show_bug.cgi?id=723338